split the main form page and result modal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,37 +1,2 @@
-<div class="input-group">
-  <label for="">Patients blood group:</label>
-  <select name="" id="" [(ngModel)]="patientBloodGroup">
-    <option value="">select blood group</option>
-    @for (bloodgroup of bloodGroups; track $index) {
-    <option>{{ bloodgroup }}</option>
-    }
-  </select>
-</div>
-<div class="input-group">
-  <label for="">Donor blood group</label>
-  <select
-    name=""
-    id=""
-    [(ngModel)]="donorBloodGroup"
-    [disabled]="!patientBloodGroup"
-  >
-    <option value="">select blood group</option>
-    @for (bloodgroup of bloodGroups; track $index) {
-    <option>{{ bloodgroup }}</option>
-    }
-  </select>
-</div>
-<button
-  type="submit"
-  (click)="checkCompatibilty()"
-  [disabled]="!patientBloodGroup || !donorBloodGroup"
->
-  Submit
-</button>
+  <main-container></main-container>
 
-@if (isCompatible) {
-<div class="message">Compatible👍</div>
-}@else if(isCheckDone){
-<div class="message">Not Compatible👎</div>
-
-}
