--- a/src/app/main-container/main-container.component.html
+++ b/src/app/main-container/main-container.component.html
@@ -1,6 +1,12 @@
 <div class="bg-blue-950 min-h-screen flex flex-col items-center">
+  <div class="p-10 rounded-lg w-full md:w-3/4 mx-auto lg:w-1/2">
+    <h1 class="text-23xl text-white p-5">
+      <span class="bg-red-500 text-white p-1 rounded">Blood Harmony</span> Discover Your
+      Compatibility, Save Lives Through Donation
+    </h1>
+  </div>
   <div
-    class="bg-slate-50 p-10 rounded-lg shadow w-80 md:w-3/4 mx-auto mt-5 lg:w-1/2"
+    class="bg-slate-50 p-10 rounded-lg shadow w-80 md:w-3/4 mx-auto lg:w-1/2"
   >
     <div>
       <label for="patient" class="block mb-2 font-bold text-gray-600"
@@ -45,5 +51,4 @@
       Submit
     </button>
   </div>
-  <result [CheckDone]="isCheckDone" [Compatible]="isCompatible" ></result>
 </div>
