--- a/src/app/main-container/main-container.component.html
+++ b/src/app/main-container/main-container.component.html
@@ -1,9 +1,14 @@
 <div class="bg-blue-950 min-h-screen flex flex-col items-center">
-  <div class="p-10 rounded-lg w-full md:w-3/4 mx-auto lg:w-1/2">
-    <h1 class="text-23xl text-white p-5">
-      <span class="bg-red-500 text-white p-1 rounded">Blood Harmony</span> Discover Your
-      Compatibility, Save Lives Through Donation
-    </h1>
+  <div class="p-10 rounded-lg w-full md:w-3/4 mx-auto lg:w-1/2 text-center">
+    <div class="">
+      <p class="text-white text-center p-3 text-5xl font-bold" id="heading">
+        Blood Harmony
+      </p>
+    </div>
+
+    <h3 class="text-23xl text-white" id="subheading">
+      Discover Your Compatibility, Save Lives Through Donation
+    </h3>
   </div>
   <div
     class="bg-slate-50 p-10 rounded-lg shadow w-80 md:w-3/4 mx-auto lg:w-1/2"
@@ -46,7 +51,7 @@
       type="submit"
       (click)="checkCompatibility()"
       [disabled]="!patientBloodGroup || !donorBloodGroup"
-      class="block w-full border border-slate-300 text-white bg-black font-bold p-4 rounded-lg hover:border-slate-400"
+      class="block w-full border border-slate-300 text-white bg-slate-900 hover:bg-slate-950 font-bold p-4 rounded-lg hover:border-slate-400"
     >
       Submit
     </button>
