--- a/src/app/main-container/main-container.component.css
+++ b/src/app/main-container/main-container.component.css
@@ -1,10 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 #heading{
-    /* font-family: "Work Sans", sans-serif; */
     font-family: "Raleway", sans-serif;
     font-weight: bold;
-    /* text-transform: uppercase; */
     text-decoration:1px  wavy white;
 
 }
@@ -14,5 +13,11 @@
 }
 label,option{
     font-family: "Raleway", sans-serif;
-
+}
+.dev{
+    font-family: "Poppins", sans-serif;
+    font-style: italic;
+    position:absolute;
+    bottom: 0;
+    color: white;
 }
